@@ -31,6 +31,8 @@ Enhancements:
   - Added missing 'self.' before member in error message.
 * Merged in lp:~adrien-delhorme/duplicity/hubic
   - Add Hubic support through pyrax and a custom pyrax_identity module.
+* Fixed bug 1385599 with changes by Yannick Molin. SSL settings are now
+  conditioned on protocol ftp or ftps.
 
 
 New in v0.7.00 (2014/10/23)
